Fix spacing

--- a/assets/css/3-sections/_projects.sass
+++ b/assets/css/3-sections/_projects.sass
@@ -1,24 +1,30 @@
 .section-projects
   margin: 0
   padding: 10px
+  
 .header
   text-align: center
+  
 .project-holder
   display: flex
   justify-content: center
   flex-wrap: wrap
+  padding-bottom: 300px
+  
 .project
   width: 400px
   height: 200px
   margin: 20px
   overflow: hidden
   position: relative
+  
   .info
     position: absolute
     top: 0
     left: 0
     width: 100%
     height: 100%
+    
     .meta
       box-sizing: border-box
       background: $accent
@@ -29,18 +35,22 @@
       -webkit-transition: bottom .5s ease
       position: absolute
       padding: 10px
+      
       .title
         text-align: right
         margin: 0
         padding-bottom: 5px
         color: $lightTextColor
         font-size: 1.2em
+      
       .desc
         text-align: center
         color: $lightTextColor
         padding: 20px
+  
   img
     width: 100%
+
 .project:hover
   .meta
     bottom: 0
